--- a/Guided Transfer Learning-DevTech/guided_transfer_learning_library/how_to_use_gtl_library.ipynb
+++ b/Guided Transfer Learning-DevTech/guided_transfer_learning_library/how_to_use_gtl_library.ipynb
@@ -865,7 +865,7 @@
     "\n",
     "guidance_matrix = gtl.load_guidance_matrix()     # -using gtl library----------\n",
     "gtl.adjust_guidance_matrix(guidance_matrix, 'zero_enforced_and_normalized', 'warm')\n",
-    "gtl.scale_guidance_matrix(guidance_matrix, 2)    # -using gtl library----------"
+    "gtl.scale_guidance_matrix(guidance_matrix, 2)    # -using gtl library----------\n"
    ]
   },
   {
